--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -11,7 +11,7 @@ h3{
     color: black;
     margin-left:80px;
     width: 700px;
-    border: 3px solid #73AD21;
+    /*border: 3px solid #73AD21;*/
 }
 p{
     color: black;
