New changes in the portfolio

--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -20,4 +20,8 @@ p{
     width: 30px;
     margin: 10px;
     filter: grayscale();
+    padding-bottom: 30px;
+}
+.icon:hover{
+    filter: none;
 }
