--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,3 +4,8 @@
     margin-left: 150px;
     margin-bottom: 5%;
 }
+
+.card-row:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    transform: scale(1.1);
+}
