--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,10 @@
     align-items: center;
     text-align: center;
     background: black;
-    height: 60vh;
+    display: block;
+    padding: 15rem;
+    width:100%;
+    /*height: 60vh;*/
     background-size: 100% !important;
     background-repeat: no-repeat !important;
     position: relative;
@@ -14,20 +17,58 @@
             rgba(20, 20, 20, .5)),
     url("https://cdn.pixabay.com/photo/2020/01/19/11/10/mountains-4777410_1280.jpg");
 }
-
-h1{
+h1 {
     color: white;
-    margin-top: 250px !important;
-    font-size: 70px!important;
+    vertical-align: middle;
+    /*margin-top: auto !important;*/
+    font-size: 4.5rem !important;
 }
-.pHeader{
+
+.pHeader {
     color: white;
-    font-size: 30px;
+    font-size: 2rem;
 
 }
 
 .animation {
-    margin-top: 250px !important;
-    font-size: 70px!important;
+    /*margin-top: 250px !important;*/
+    /*font-size: 70px !important;*/
 }
 
+@media only screen and (max-width: 1200px) {
+    h1 {
+        color: white;
+        font-size: 1rem !important;
+    }
+
+    .header{
+        padding: 7rem;
+        width: 100%;
+        margin-bottom: 2rem;
+        box-sizing: content-box;
+
+
+    }
+
+    .pHeader {
+        color: white;
+        font-size: 0.5rem;
+        position: absolute;
+        margin-top: 10px;
+    }
+    @media only screen and (max-width: 1500px) {
+        .header{
+            background-size: cover;
+            text-align: center;
+            padding: 5rem;
+            height: auto;
+            width: auto;
+            margin-bottom: 2rem;
+            box-sizing: content-box;
+
+        }
+    .banner{
+
+    }
+    }
+}
