--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 html {
     scroll-behavior: smooth;
 }
+body{
+    width: 100%;
+    height: 100%;
+
+}
+@media only screen and (max-width: 1200px) {
+    html{
+        box-sizing: content-box;
+    }
+}
