--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -23,7 +23,9 @@ h1 {
     /*margin-top: auto !important;*/
     font-size: 4.5rem !important;
 }
-
+.banner{
+    padding-left: 100px;
+}
 .pHeader {
     color: white;
     font-size: 2rem;
@@ -67,8 +69,5 @@ h1 {
             box-sizing: content-box;
 
         }
-    .banner{
-
-    }
     }
 }
