--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,12 +2,11 @@
     display: inline-block;
     flex-direction: row;
     /*margin-left: 150px;*/
-    margin-left: 5rem;
-    margin-right: 5rem;
+    margin-left: 10rem;
     margin-bottom: 5%;
 }
 
-.card-row:first-child { margin-left: 10rem; }
+.card-row:last-child { margin-right: 5rem; }
 .row{
     margin: auto;
 }
