--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -14,6 +14,10 @@
         justify-content: space-evenly;
         width: 15rem !important;
     }
+    .card-row:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        transform: scale(1.1);
+    }
 
     @media only screen and (max-width: 1600px) {
         .card-row {
